src/test/deca/syntax/valid/SansObjet/EqNeqExpr2-Eq-Multiple.deca
// Description:
//    Two Equals expression.
//
// Results:
//    (void)
//
// Historique:
//    cree le 08/01/2022

{
        x == 3 == 2.5;
}
