src/test/deca/syntax/invalid/SansObjet/MultExpr3-Invalid.deca
// Description:
//    Divide expression with invalid syntax.
//
// Results:
//    12:0 no viable alternative at input '}'
//
// Historique:
//    cree le 09/01/2022

{
        x // 3;
}
